Auto-reformat code to the .editorconfig