@@ -91,8 +91,89 @@ import me.ccrama.redditslide.util.SubmissionParser;
 public class TumblrPager extends FullScreenActivity
         implements FolderChooserDialogCreate.FolderCallback {
 
-    private static int adapterPosition;
     public static final String SUBREDDIT = "subreddit";
+    private static int adapterPosition;
+    public List<Photo> images;
+    public String subreddit;
+    ViewPager p;
+
+    public static void setTextWithLinks(String s, SpoilerRobotoTextView text) {
+        String[] parts = s.split("\\s+");
+
+        StringBuilder b = new StringBuilder();
+        for (String item : parts)
+            try {
+                URL url = new URL(item);
+                b.append(" <a href=\"").append(url).append("\">").append(url).append("</a>");
+            } catch (MalformedURLException e) {
+                b.append(" ").append(item);
+            }
+
+        text.setTextHtml(b.toString(), "no sub");
+    }
+
+    public static String readableFileSize(long size) {
+        if (size <= 0) return "0";
+        final String[] units = new String[]{"B", "kB", "MB", "GB", "TB"};
+        int digitGroups = (int) (Math.log10(size) / Math.log10(1024));
+        return new DecimalFormat("#,##0.#").format(size / Math.pow(1024, digitGroups))
+                + " "
+                + units[digitGroups];
+    }
+
+    private static void loadImage(final View rootView, Fragment f, String url) {
+        final SubsamplingScaleImageView image = rootView.findViewById(R.id.image);
+        image.setMinimumDpi(70);
+        image.setMinimumTileDpi(240);
+        ImageView fakeImage = new ImageView(f.getActivity());
+        final TextView size = rootView.findViewById(R.id.size);
+        fakeImage.setLayoutParams(
+                new LinearLayout.LayoutParams(image.getWidth(), image.getHeight()));
+        fakeImage.setScaleType(ImageView.ScaleType.CENTER_CROP);
+        ((Reddit) f.getActivity().getApplication()).getImageLoader()
+                .displayImage(url, new ImageViewAware(fakeImage),
+                        new DisplayImageOptions.Builder().resetViewBeforeLoading(true)
+                                .cacheOnDisk(true)
+                                .imageScaleType(ImageScaleType.NONE)
+                                .cacheInMemory(false)
+                                .build(), new ImageLoadingListener() {
+
+                            @Override
+                            public void onLoadingStarted(String imageUri, View view) {
+                                size.setVisibility(View.VISIBLE);
+                            }
+
+                            @Override
+                            public void onLoadingFailed(String imageUri, View view,
+                                                        FailReason failReason) {
+                                Log.v("Slide", "LOADING FAILED");
+
+                            }
+
+                            @Override
+                            public void onLoadingComplete(String imageUri, View view,
+                                                          Bitmap loadedImage) {
+                                size.setVisibility(View.GONE);
+                                image.setImage(ImageSource.bitmap(loadedImage));
+                                (rootView.findViewById(R.id.progress)).setVisibility(View.GONE);
+                            }
+
+                            @Override
+                            public void onLoadingCancelled(String imageUri, View view) {
+                                Log.v("Slide", "LOADING CANCELLED");
+
+                            }
+                        }, new ImageLoadingProgressListener() {
+                            @Override
+                            public void onProgressUpdate(String imageUri, View view, int current,
+                                                         int total) {
+                                size.setText(readableFileSize(total));
+
+                                ((ProgressBar) rootView.findViewById(R.id.progress)).setProgress(
+                                        Math.round(100.0f * current / total));
+                            }
+                        });
+    }
 
     @Override
     public boolean onOptionsItemSelected(MenuItem item) {
@@ -166,7 +247,7 @@ public class TumblrPager extends FullScreenActivity
         ToolbarColorizeHelper.colorizeToolbar(mToolbar, Color.WHITE, this);
         setSupportActionBar(mToolbar);
         getSupportActionBar().setDisplayHomeAsUpEnabled(true);
-        if(getIntent().hasExtra(SUBREDDIT)){
+        if (getIntent().hasExtra(SUBREDDIT)) {
             this.subreddit = getIntent().getStringExtra(SUBREDDIT);
         }
 
@@ -185,94 +266,6 @@ public class TumblrPager extends FullScreenActivity
 
     }
 
-    public class LoadIntoPager extends TumblrUtils.GetTumblrPostWithCallback {
-
-        String url;
-
-        public LoadIntoPager(@NotNull String url, @NotNull Activity baseActivity) {
-            super(url, baseActivity);
-            this.url = url;
-        }
-
-        @Override
-        public void onError() {
-            Intent i =
-                    new Intent(TumblrPager.this, Website.class);
-            i.putExtra(LinkUtil.EXTRA_URL, url);
-            startActivity(i);
-            finish();
-        }
-
-        @Override
-        public void doWithData(final List<Photo> jsonElements) {
-            super.doWithData(jsonElements);
-            findViewById(R.id.progress).setVisibility(View.GONE);
-            images = new ArrayList<>(jsonElements);
-
-            p = (ViewPager) findViewById(R.id.images_horizontal);
-
-            if (getSupportActionBar() != null) {
-                getSupportActionBar().setSubtitle(1 + "/" + images.size());
-            }
-
-            AlbumViewPager adapter = new AlbumViewPager(getSupportFragmentManager());
-            p.setAdapter(adapter);
-            p.setCurrentItem(1);
-            findViewById(R.id.grid).setOnClickListener(new View.OnClickListener() {
-                @Override
-                public void onClick(View v) {
-                    LayoutInflater l = getLayoutInflater();
-                    View body = l.inflate(R.layout.album_grid_dialog, null, false);
-                    AlertDialogWrapper.Builder b = new AlertDialogWrapper.Builder(TumblrPager.this);
-                    GridView gridview = body.findViewById(R.id.images);
-                    gridview.setAdapter(new ImageGridAdapterTumblr(TumblrPager.this, images));
-
-
-                    b.setView(body);
-                    final Dialog d = b.create();
-                    gridview.setOnItemClickListener(new AdapterView.OnItemClickListener() {
-                        public void onItemClick(AdapterView<?> parent, View v, int position,
-                                long id) {
-                            p.setCurrentItem(position + 1);
-                            d.dismiss();
-                        }
-                    });
-                    d.show();
-                }
-            });
-            p.addOnPageChangeListener(new ViewPager.OnPageChangeListener() {
-                @Override
-                public void onPageScrolled(int position, float positionOffset,
-                        int positionOffsetPixels) {
-                    if (position != 0) {
-                        if (getSupportActionBar() != null) {
-                            getSupportActionBar().setSubtitle((position) + "/" + images.size());
-                        }
-                    }
-                    if (position == 0 && positionOffset < 0.2) {
-                        finish();
-                    }
-                }
-
-                @Override
-                public void onPageSelected(int position) {
-                }
-
-                @Override
-                public void onPageScrollStateChanged(int state) {
-
-                }
-            });
-            adapter.notifyDataSetChanged();
-
-        }
-    }
-
-    ViewPager p;
-
-    public List<Photo> images;
-    public String subreddit;
-
     @Override
     public boolean onCreateOptionsMenu(Menu menu) {
         MenuInflater inflater = getMenuInflater();
@@ -284,134 +277,8 @@ public class TumblrPager extends FullScreenActivity
         return true;
     }
 
-    public class AlbumViewPager extends FragmentStatePagerAdapter {
-        public AlbumViewPager(FragmentManager m) {
-            super(m, BEHAVIOR_RESUME_ONLY_CURRENT_FRAGMENT);
-        }
-
-        @Override
-        public Fragment getItem(int i) {
-
-            if (i == 0) {
-                return new BlankFragment();
-            }
-
-            i--;
-            Photo current = images.get(i);
-
-            try {
-                if (ContentType.isGif(new URI(current.getOriginalSize().getUrl()))) {
-                    //do gif stuff
-                    Fragment f = new Gif();
-                    Bundle args = new Bundle();
-                    args.putInt("page", i);
-                    f.setArguments(args);
-
-                    return f;
-                } else {
-                    Fragment f = new ImageFullNoSubmission();
-                    Bundle args = new Bundle();
-                    args.putInt("page", i);
-                    f.setArguments(args);
-
-                    return f;
-                }
-            } catch (URISyntaxException e) {
-                Fragment f = new ImageFullNoSubmission();
-                Bundle args = new Bundle();
-                args.putInt("page", i);
-                f.setArguments(args);
-
-                return f;
-            }
-        }
-
-
-        @Override
-        public int getCount() {
-            if (images == null) {
-                return 0;
-            }
-            return images.size() + 1;
-        }
-    }
-
-    public static class Gif extends Fragment {
-
-        private int i = 0;
-        private View gif;
-        ViewGroup   rootView;
-        ProgressBar loader;
-
-        @Override
-        public void setUserVisibleHint(boolean isVisibleToUser) {
-            super.setUserVisibleHint(isVisibleToUser);
-            if (this.isVisible()) {
-                if (!isVisibleToUser)   // If we are becoming invisible, then...
-                {
-                    ((ExoVideoView) gif).pause();
-                    gif.setVisibility(View.GONE);
-                }
-
-                if (isVisibleToUser) // If we are becoming visible, then...
-                {
-                    ((ExoVideoView) gif).play();
-                    gif.setVisibility(View.VISIBLE);
-
-                }
-            }
-        }
-
-        @Override
-        public View onCreateView(LayoutInflater inflater, ViewGroup container,
-                Bundle savedInstanceState) {
-            rootView = (ViewGroup) inflater.inflate(R.layout.submission_gifcard_album, container,
-                    false);
-            loader = rootView.findViewById(R.id.gifprogress);
-
-
-            gif = rootView.findViewById(R.id.gif);
-
-            gif.setVisibility(View.VISIBLE);
-            final ExoVideoView v = (ExoVideoView) gif;
-            v.clearFocus();
-
-            final String url = ((TumblrPager) getActivity()).images.get(i).getOriginalSize().getUrl();
-
-            new GifUtils.AsyncLoadGif(getActivity(), rootView.findViewById(R.id.gif), loader, null, new Runnable() {
-                @Override
-                public void run() {
-
-                }
-            }, false, true, rootView.findViewById(R.id.size),  ((TumblrPager) getActivity()).subreddit).execute(url);
-            rootView.findViewById(R.id.more).setOnClickListener(new View.OnClickListener() {
-                @Override
-                public void onClick(View v) {
-                    ((TumblrPager) getActivity()).showBottomSheetImage(url, true, i);
-                }
-            });
-            rootView.findViewById(R.id.save).setOnClickListener(new View.OnClickListener() {
-                @Override
-                public void onClick(View v) {
-                    MediaView.doOnClick.run();
-                }
-            });
-            return rootView;
-        }
-
-
-        @Override
-        public void onCreate(Bundle savedInstanceState) {
-            super.onCreate(savedInstanceState);
-            Bundle bundle = this.getArguments();
-            i = bundle.getInt("page", 0);
-
-        }
-
-    }
-
     public void showBottomSheetImage(final String contentUrl, final boolean isGif,
-            final int index) {
+                                     final int index) {
 
         int[] attrs = new int[]{R.attr.tintColor};
         TypedArray ta = obtainStyledAttributes(attrs);
@@ -480,6 +347,138 @@ public class TumblrPager extends FullScreenActivity
         }
     }
 
+    public void showFirstDialog() {
+        runOnUiThread(new Runnable() {
+            @Override
+            public void run() {
+                new AlertDialogWrapper.Builder(TumblrPager.this).setTitle(R.string.set_save_location)
+                        .setMessage(R.string.set_save_location_msg)
+                        .setPositiveButton(R.string.btn_yes, new DialogInterface.OnClickListener() {
+                            @Override
+                            public void onClick(DialogInterface dialog, int which) {
+                                new FolderChooserDialogCreate.Builder(TumblrPager.this).chooseButton(
+                                        R.string.btn_select)  // changes label of the choose button
+                                        .initialPath(Environment.getExternalStorageDirectory()
+                                                .getPath())  // changes initial path, defaults to external storage directory
+                                        .show();
+                            }
+                        })
+                        .setNegativeButton(R.string.btn_no, null)
+                        .show();
+            }
+        });
+
+    }
+
+    public void showErrorDialog() {
+        runOnUiThread(new Runnable() {
+            @Override
+            public void run() {
+                new AlertDialogWrapper.Builder(TumblrPager.this).setTitle(
+                        R.string.err_something_wrong)
+                        .setMessage(R.string.err_couldnt_save_choose_new)
+                        .setPositiveButton(R.string.btn_yes, new DialogInterface.OnClickListener() {
+                            @Override
+                            public void onClick(DialogInterface dialog, int which) {
+                                new FolderChooserDialogCreate.Builder(TumblrPager.this).chooseButton(
+                                        R.string.btn_select)  // changes label of the choose button
+                                        .initialPath(Environment.getExternalStorageDirectory()
+                                                .getPath())  // changes initial path, defaults to external storage directory
+                                        .show();
+                            }
+                        })
+                        .setNegativeButton(R.string.btn_no, null)
+                        .show();
+            }
+        });
+
+    }
+
+    @Override
+    public void onFolderSelection(FolderChooserDialogCreate dialog, File folder, boolean isSaveToLocation) {
+        if (folder != null) {
+            Reddit.appRestart.edit().putString("imagelocation", folder.getAbsolutePath()).apply();
+            Toast.makeText(this,
+                    getString(R.string.settings_set_image_location, folder.getAbsolutePath())
+                            + folder.getAbsolutePath(), Toast.LENGTH_LONG).show();
+
+        }
+    }
+
+    public static class Gif extends Fragment {
+
+        ViewGroup rootView;
+        ProgressBar loader;
+        private int i = 0;
+        private View gif;
+
+        @Override
+        public void setUserVisibleHint(boolean isVisibleToUser) {
+            super.setUserVisibleHint(isVisibleToUser);
+            if (this.isVisible()) {
+                if (!isVisibleToUser)   // If we are becoming invisible, then...
+                {
+                    ((ExoVideoView) gif).pause();
+                    gif.setVisibility(View.GONE);
+                }
+
+                if (isVisibleToUser) // If we are becoming visible, then...
+                {
+                    ((ExoVideoView) gif).play();
+                    gif.setVisibility(View.VISIBLE);
+
+                }
+            }
+        }
+
+        @Override
+        public View onCreateView(LayoutInflater inflater, ViewGroup container,
+                                 Bundle savedInstanceState) {
+            rootView = (ViewGroup) inflater.inflate(R.layout.submission_gifcard_album, container,
+                    false);
+            loader = rootView.findViewById(R.id.gifprogress);
+
+
+            gif = rootView.findViewById(R.id.gif);
+
+            gif.setVisibility(View.VISIBLE);
+            final ExoVideoView v = (ExoVideoView) gif;
+            v.clearFocus();
+
+            final String url = ((TumblrPager) getActivity()).images.get(i).getOriginalSize().getUrl();
+
+            new GifUtils.AsyncLoadGif(getActivity(), rootView.findViewById(R.id.gif), loader, null, new Runnable() {
+                @Override
+                public void run() {
+
+                }
+            }, false, true, rootView.findViewById(R.id.size), ((TumblrPager) getActivity()).subreddit).execute(url);
+            rootView.findViewById(R.id.more).setOnClickListener(new View.OnClickListener() {
+                @Override
+                public void onClick(View v) {
+                    ((TumblrPager) getActivity()).showBottomSheetImage(url, true, i);
+                }
+            });
+            rootView.findViewById(R.id.save).setOnClickListener(new View.OnClickListener() {
+                @Override
+                public void onClick(View v) {
+                    MediaView.doOnClick.run();
+                }
+            });
+            return rootView;
+        }
+
+
+        @Override
+        public void onCreate(Bundle savedInstanceState) {
+            super.onCreate(savedInstanceState);
+            Bundle bundle = this.getArguments();
+            i = bundle.getInt("page", 0);
+
+        }
+
+    }
+
     public static class ImageFullNoSubmission extends Fragment {
 
         private int i = 0;
@@ -490,7 +489,7 @@ public class TumblrPager extends FullScreenActivity
 
         @Override
         public View onCreateView(LayoutInflater inflater, ViewGroup container,
-                Bundle savedInstanceState) {
+                                 Bundle savedInstanceState) {
             final ViewGroup rootView =
                     (ViewGroup) inflater.inflate(R.layout.album_image_pager, container, false);
 
@@ -499,8 +498,8 @@ public class TumblrPager extends FullScreenActivity
             boolean lq = false;
             if (SettingValues.loadImageLq && (SettingValues.lowResAlways
                     || (!NetworkUtil.isConnectedWifi(getActivity())
-                    && SettingValues.lowResMobile)) && current.getAltSizes()!= null&&! current.getAltSizes().isEmpty()) {
-                String lqurl = current.getAltSizes().get(current.getAltSizes().size()/2).getUrl();
+                    && SettingValues.lowResMobile)) && current.getAltSizes() != null && !current.getAltSizes().isEmpty()) {
+                String lqurl = current.getAltSizes().get(current.getAltSizes().size() / 2).getUrl();
                 loadImage(rootView, this, lqurl);
                 lq = true;
             } else {
@@ -618,139 +617,138 @@ public class TumblrPager extends FullScreenActivity
         }
     }
 
-    public static void setTextWithLinks(String s, SpoilerRobotoTextView text) {
-        String[] parts = s.split("\\s+");
+    public class LoadIntoPager extends TumblrUtils.GetTumblrPostWithCallback {
 
-        StringBuilder b = new StringBuilder();
-        for (String item : parts)
+        String url;
+
+        public LoadIntoPager(@NotNull String url, @NotNull Activity baseActivity) {
+            super(url, baseActivity);
+            this.url = url;
+        }
+
+        @Override
+        public void onError() {
+            Intent i =
+                    new Intent(TumblrPager.this, Website.class);
+            i.putExtra(LinkUtil.EXTRA_URL, url);
+            startActivity(i);
+            finish();
+        }
+
+        @Override
+        public void doWithData(final List<Photo> jsonElements) {
+            super.doWithData(jsonElements);
+            findViewById(R.id.progress).setVisibility(View.GONE);
+            images = new ArrayList<>(jsonElements);
+
+            p = (ViewPager) findViewById(R.id.images_horizontal);
+
+            if (getSupportActionBar() != null) {
+                getSupportActionBar().setSubtitle(1 + "/" + images.size());
+            }
+
+            AlbumViewPager adapter = new AlbumViewPager(getSupportFragmentManager());
+            p.setAdapter(adapter);
+            p.setCurrentItem(1);
+            findViewById(R.id.grid).setOnClickListener(new View.OnClickListener() {
+                @Override
+                public void onClick(View v) {
+                    LayoutInflater l = getLayoutInflater();
+                    View body = l.inflate(R.layout.album_grid_dialog, null, false);
+                    AlertDialogWrapper.Builder b = new AlertDialogWrapper.Builder(TumblrPager.this);
+                    GridView gridview = body.findViewById(R.id.images);
+                    gridview.setAdapter(new ImageGridAdapterTumblr(TumblrPager.this, images));
+
+
+                    b.setView(body);
+                    final Dialog d = b.create();
+                    gridview.setOnItemClickListener(new AdapterView.OnItemClickListener() {
+                        public void onItemClick(AdapterView<?> parent, View v, int position,
+                                                long id) {
+                            p.setCurrentItem(position + 1);
+                            d.dismiss();
+                        }
+                    });
+                    d.show();
+                }
+            });
+            p.addOnPageChangeListener(new ViewPager.OnPageChangeListener() {
+                @Override
+                public void onPageScrolled(int position, float positionOffset,
+                                           int positionOffsetPixels) {
+                    if (position != 0) {
+                        if (getSupportActionBar() != null) {
+                            getSupportActionBar().setSubtitle((position) + "/" + images.size());
+                        }
+                    }
+                    if (position == 0 && positionOffset < 0.2) {
+                        finish();
+                    }
+                }
+
+                @Override
+                public void onPageSelected(int position) {
+                }
+
+                @Override
+                public void onPageScrollStateChanged(int state) {
+
+                }
+            });
+            adapter.notifyDataSetChanged();
+
+        }
+    }
+
+    public class AlbumViewPager extends FragmentStatePagerAdapter {
+        public AlbumViewPager(FragmentManager m) {
+            super(m, BEHAVIOR_RESUME_ONLY_CURRENT_FRAGMENT);
+        }
+
+        @Override
+        public Fragment getItem(int i) {
+
+            if (i == 0) {
+                return new BlankFragment();
+            }
+
+            i--;
+            Photo current = images.get(i);
+
             try {
-                URL url = new URL(item);
-                b.append(" <a href=\"").append(url).append("\">").append(url).append("</a>");
-            } catch (MalformedURLException e) {
-                b.append(" ").append(item);
+                if (ContentType.isGif(new URI(current.getOriginalSize().getUrl()))) {
+                    //do gif stuff
+                    Fragment f = new Gif();
+                    Bundle args = new Bundle();
+                    args.putInt("page", i);
+                    f.setArguments(args);
+
+                    return f;
+                } else {
+                    Fragment f = new ImageFullNoSubmission();
+                    Bundle args = new Bundle();
+                    args.putInt("page", i);
+                    f.setArguments(args);
+
+                    return f;
+                }
+            } catch (URISyntaxException e) {
+                Fragment f = new ImageFullNoSubmission();
+                Bundle args = new Bundle();
+                args.putInt("page", i);
+                f.setArguments(args);
+
+                return f;
             }
+        }
 
-        text.setTextHtml(b.toString(), "no sub");
-    }
 
-    public static String readableFileSize(long size) {
-        if (size <= 0) return "0";
-        final String[] units = new String[]{"B", "kB", "MB", "GB", "TB"};
-        int digitGroups = (int) (Math.log10(size) / Math.log10(1024));
-        return new DecimalFormat("#,##0.#").format(size / Math.pow(1024, digitGroups))
-                + " "
-                + units[digitGroups];
-    }
-
-    private static void loadImage(final View rootView, Fragment f, String url) {
-        final SubsamplingScaleImageView image = rootView.findViewById(R.id.image);
-        image.setMinimumDpi(70);
-        image.setMinimumTileDpi(240);
-        ImageView fakeImage = new ImageView(f.getActivity());
-        final TextView size = rootView.findViewById(R.id.size);
-        fakeImage.setLayoutParams(
-                new LinearLayout.LayoutParams(image.getWidth(), image.getHeight()));
-        fakeImage.setScaleType(ImageView.ScaleType.CENTER_CROP);
-        ((Reddit) f.getActivity().getApplication()).getImageLoader()
-                .displayImage(url, new ImageViewAware(fakeImage),
-                        new DisplayImageOptions.Builder().resetViewBeforeLoading(true)
-                                .cacheOnDisk(true)
-                                .imageScaleType(ImageScaleType.NONE)
-                                .cacheInMemory(false)
-                                .build(), new ImageLoadingListener() {
-
-                            @Override
-                            public void onLoadingStarted(String imageUri, View view) {
-                                size.setVisibility(View.VISIBLE);
-                            }
-
-                            @Override
-                            public void onLoadingFailed(String imageUri, View view,
-                                    FailReason failReason) {
-                                Log.v("Slide", "LOADING FAILED");
-
-                            }
-
-                            @Override
-                            public void onLoadingComplete(String imageUri, View view,
-                                    Bitmap loadedImage) {
-                                size.setVisibility(View.GONE);
-                                image.setImage(ImageSource.bitmap(loadedImage));
-                                (rootView.findViewById(R.id.progress)).setVisibility(View.GONE);
-                            }
-
-                            @Override
-                            public void onLoadingCancelled(String imageUri, View view) {
-                                Log.v("Slide", "LOADING CANCELLED");
-
-                            }
-                        }, new ImageLoadingProgressListener() {
-                            @Override
-                            public void onProgressUpdate(String imageUri, View view, int current,
-                                    int total) {
-                                size.setText(readableFileSize(total));
-
-                                ((ProgressBar) rootView.findViewById(R.id.progress)).setProgress(
-                                        Math.round(100.0f * current / total));
-                            }
-                        });
-    }
-
-    public void showFirstDialog() {
-        runOnUiThread(new Runnable() {
-            @Override
-            public void run() {
-                new AlertDialogWrapper.Builder(TumblrPager.this).setTitle(R.string.set_save_location)
-                        .setMessage(R.string.set_save_location_msg)
-                        .setPositiveButton(R.string.btn_yes, new DialogInterface.OnClickListener() {
-                            @Override
-                            public void onClick(DialogInterface dialog, int which) {
-                                new FolderChooserDialogCreate.Builder(TumblrPager.this).chooseButton(
-                                        R.string.btn_select)  // changes label of the choose button
-                                        .initialPath(Environment.getExternalStorageDirectory()
-                                                .getPath())  // changes initial path, defaults to external storage directory
-                                        .show();
-                            }
-                        })
-                        .setNegativeButton(R.string.btn_no, null)
-                        .show();
+        @Override
+        public int getCount() {
+            if (images == null) {
+                return 0;
             }
-        });
-
-    }
-
-    public void showErrorDialog() {
-        runOnUiThread(new Runnable() {
-            @Override
-            public void run() {
-                new AlertDialogWrapper.Builder(TumblrPager.this).setTitle(
-                        R.string.err_something_wrong)
-                        .setMessage(R.string.err_couldnt_save_choose_new)
-                        .setPositiveButton(R.string.btn_yes, new DialogInterface.OnClickListener() {
-                            @Override
-                            public void onClick(DialogInterface dialog, int which) {
-                                new FolderChooserDialogCreate.Builder(TumblrPager.this).chooseButton(
-                                        R.string.btn_select)  // changes label of the choose button
-                                        .initialPath(Environment.getExternalStorageDirectory()
-                                                .getPath())  // changes initial path, defaults to external storage directory
-                                        .show();
-                            }
-                        })
-                        .setNegativeButton(R.string.btn_no, null)
-                        .show();
-            }
-        });
-
-    }
-
-    @Override
-    public void onFolderSelection(FolderChooserDialogCreate dialog, File folder, boolean isSaveToLocation) {
-        if (folder != null) {
-            Reddit.appRestart.edit().putString("imagelocation", folder.getAbsolutePath()).apply();
-            Toast.makeText(this,
-                    getString(R.string.settings_set_image_location, folder.getAbsolutePath())
-                            + folder.getAbsolutePath(), Toast.LENGTH_LONG).show();
-
+            return images.size() + 1;
         }
     }
 }
